--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Advent+Pro&family=Pacifico&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -300,3 +301,15 @@ input[type="submit"]
     font-size: 600;
     cursor: pointer;
 }
+.Dashbord
+{
+    font-size: 7rem;
+    margin: 1rem 0;
+    font-family: 'Pacifico', cursive;
+}
+.Logout
+{
+    cursor: pointer;
+    text-align: center;
+}
+
