--- a/Forgot_Password.css
+++ b/Forgot_Password.css
@@ -1,68 +1,60 @@
-body
-{
-    background-image: url(test.png);
-    background-size: cover;
-    height: 100vh;
-}
-ul
+*
 {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-li
+body
 {
-    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-image: url(test.png);
 }
-a
+.header
 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px 40px;
+    display: flex;
+    justify-content: space-between;
+    z-index: 99;
+}
+.Logo
+{
+    font-size: 2em;
+    color: #fff;
+    user-select: none;
+} 
+.navbar a
+{
+    position: relative;
+    font-size: 1.1em;
+    color: #fff;
     text-decoration: none;
-    color: black
+    font-weight: 500;
+    margin-left: 40px;
 }
-
-li
+ .btn
 {
-    float: right;
-    font-size: 1.01em;
-    margin:20px 10px 20px 10px;
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid #fff;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1.2em;
+    color: #fff;
+    font-weight: 500;
+    margin-left: 10px;
+    transition: 1.5s;
 }
-li a
+.btn:hover
 {
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    padding: 10px 22px;
-}
-#icon
-{
-    font-weight: bold;
-    float: left;
-    border: none;
-        outline: none;
-        background: #b4b4c0;
-        padding: 3px 10px;
-        width: 100px;
-        margin-top: 1px;
-        border-radius: 10px;
-        font-size: 600;
-        cursor: pointer;
-}
-.F_password
-{
-    text-align: center;
-    padding: 50px;
-    color: white;
-    
-}
-#try
-{
-    font-weight: bold;
-        border: none;
-        outline: none;
-        background: #b4b4c0;
-        padding: 3px 10px;
-        width: 100px;
-        margin-top: 1px;
-        border-radius: 10px;
-        font-size: 600;
-        cursor: pointer;
+    background-color: #fff;
+    color: #162938;
 }
