--- a/Forgot_Password.css
+++ b/Forgot_Password.css
@@ -1,60 +1,70 @@
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 body
 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    margin: 0;
+    padding: 0;
     min-height: 100vh;
     background-image: url(test.png);
+    background-size: cover;
+  
 }
 .header
 {
+    padding-top: 10px;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 10px 40px;
-    display: flex;
-    justify-content: space-between;
-    z-index: 99;
-}
-.Logo
-{
-    font-size: 2em;
-    color: #fff;
-    user-select: none;
-} 
-.navbar a
-{
-    position: relative;
-    font-size: 1.1em;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 500;
-    margin-left: 40px;
+    width: 99.5%;
+
 }
  .btn
 {
-    width: 130px;
-    height: 50px;
+    width: 90px;
+    height: 40px;
     background: transparent;
     border: 2px solid #fff;
     outline: none;
-    border-radius: 6px;
+    border-radius: 4px;
     cursor: pointer;
     font-size: 1.2em;
     color: #fff;
     font-weight: 500;
     margin-left: 10px;
+    float: right;
     transition: 1.5s;
 }
 .btn:hover
 {
-    background-color: #fff;
+    background-color: #e58989;
     color: #162938;
+}
+
+/*=================================================>Forgot_password style==============================*/
+.body2
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+.box{
+    position: relative;
+    width: 400px;
+    height: 350px;
+    background: #1c1c1c1c;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.forgot_password_form{
+    position: absolute;
+    border-radius: 8px;
+    z-index: 10;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column; 
+}
+p
+{
+    font-size: 1.6em;
+    color: #000000;
 }
