--- a/Forgot_Password.css
+++ b/Forgot_Password.css
@@ -49,10 +49,9 @@ body
 .box{
     position: relative;
     width: 400px;
-    height: 350px;
-    background: #1c1c1c1c;
+    height: 300px;
+    background: #f8f7f71c;
     border-radius: 8px;
-    overflow: hidden;
 }
 
 .forgot_password_form{
@@ -66,5 +65,26 @@ body
 p
 {
     font-size: 1.6em;
-    color: #000000;
+    color:#000000;
+    font-weight: bold;
+}
+.inputs input
+{
+    width: 340px;
+    height: 50px;
+    background: #e6cccc;
+}
+.buttom input
+{
+    margin-top: 10px;
+    width: 100px;
+    height: 50px;
+    background-color: #e6cccc;
+    cursor: pointer;
+    transition: 1s;
+}
+.buttom input:hover
+{
+    background: #e58989;
+    color: #130469;
 }
