--- a/Forgot_Password.css
+++ b/Forgot_Password.css
@@ -16,18 +16,18 @@ body
     width: 99.5%;
 
 }
- .btn
+.btn
 {
     width: 90px;
     height: 40px;
     background: transparent;
     border: 2px solid #fff;
     outline: none;
+    color: #fff;
+    font-weight: 500;
     border-radius: 4px;
     cursor: pointer;
     font-size: 1.2em;
-    color: #fff;
-    font-weight: 500;
     margin-left: 10px;
     float: right;
     transition: 1.5s;
@@ -48,8 +48,8 @@ body
 }
 .box{
     position: relative;
-    width: 400px;
-    height: 300px;
+    width: 490px;
+    height: 280px;
     background: #f8f7f71c;
     border-radius: 8px;
 }
@@ -64,24 +64,28 @@ body
 }
 p
 {
-    font-size: 1.6em;
-    color:#000000;
+    font-size: 1.4em;
+    color:#000;
     font-weight: bold;
 }
 .inputs input
 {
-    width: 340px;
-    height: 50px;
+    padding: 15px;
+    width: 400px;
+    height: 25px;
+    font-size: 1.4em;
+    text-align: center;
     background: #e6cccc;
+    color: #000000;
 }
 .buttom input
 {
-    margin-top: 10px;
+    margin-top: 20px;
     width: 100px;
     height: 50px;
     background-color: #e6cccc;
     cursor: pointer;
-    transition: 1s;
+    transition: 0.5s;
 }
 .buttom input:hover
 {
