--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 .box{
     position: relative;
     width: 380px;
-    height: 480px;
+    height: 489px;
     background: #1c1c1c1c;
     border-radius: 8px;
     overflow: hidden;
@@ -161,16 +161,16 @@ input[type="submit"]
     background-color: #e58989;
     padding: 11px 25px;
     width: 100px;
-    margin-top: 10px;
+    margin-top: 7px;
     border-radius: 4px;
     font-size: 600;
     cursor: pointer;
     color: white;
+    transition: .5s;
 }
 input:hover
 {
     color: rgb(58, 5, 102);
-    transition: 0.5s ease-in-out;
 }
 .sign_up
 {
@@ -335,7 +335,7 @@ input[type="submit"]
     background: #e58989;
     padding: 11px 25px;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 25px;
     border-radius: 4px;
     font-size: 600;
     cursor: pointer;
