--- a/style.css
+++ b/style.css
@@ -315,10 +315,16 @@ input:hover
 }
 .links2{
     display: flex;
-    justify-content: space-between;
 }
-.links2 a{
-    margin: 10px 0;
+.links2 .checkbox
+{
+    width: 15px;
+    height: 47px;
+}
+
+.links2 label{
+    margin: 14px 0;
+    padding-left: 5px;
     font-size: 0.75em;
     color: #8f8f8f;
     text-decoration: none;
@@ -335,17 +341,38 @@ input[type="submit"]
     background: #e58989;
     padding: 11px 25px;
     width: 100%;
-    margin-top: 25px;
+    margin-top: 5px;
     border-radius: 4px;
     font-size: 600;
     cursor: pointer;
-    color: white;
+    color: #fff;
 }
 input:hover
 {
     color: rgb(58, 5, 102);
     transition: 0.5s ease-in-out;
 }
+.Login_registration
+{
+    margin-top: 10px;
+    font-size: 1.em;
+    color: #8f8f8f;
+}
+.Login_registration a
+{
+    padding-left: 15px;
+    font-size: 1.1em;
+    text-decoration: none;
+    color: #e58989;
+    transition: .5s;
+}
+.Login_registration a:hover
+{
+    text-decoration: underline;
+    color: #fff;
+}
+
+
 /* ==========================================> Dashboard ========================================================>*/
 
 .Dashbord
