--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 .box{
     position: relative;
     width: 380px;
-    height: 430px;
+    height: 419px;
     background: #1c1c1c1c;
     border-radius: 8px;
     overflow: hidden;
@@ -182,7 +182,7 @@ input:hover
 {
     color: #e58989;
     text-decoration: none;
-    font-size: 1.1em;
+    font-size: 1.em;
     padding-left: 18px;
     transition: .5s;
 }
