second design(forgoy_password page)

--- a/Forgot_Password.css
+++ b/Forgot_Password.css
@@ -5,7 +5,7 @@ body
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    background-image: url(test.png);
+    background-image: url(css_back.jpg);
     background-size: cover;
   
 }
@@ -21,9 +21,9 @@ body
     width: 90px;
     height: 40px;
     background: transparent;
-    border: 2px solid #fff;
+    border: 2px solid #000000;
     outline: none;
-    color: #fff;
+    color: #0c0c0c;
     font-weight: 500;
     border-radius: 4px;
     cursor: pointer;
@@ -34,8 +34,8 @@ body
 }
 .btn:hover
 {
-    background-color: #e58989;
-    color: #162938;
+    background-color: #f3f3f3;
+    color: #000000;
 }
 
 /*=================================================>Forgot_password style==============================*/
@@ -48,47 +48,63 @@ body
 }
 .box{
     position: relative;
-    width: 490px;
-    height: 280px;
-    background: #f8f7f71c;
+    width: 500px;
+    height: 345px;
+    background: #858080b9;
     border-radius: 8px;
 }
 
 .forgot_password_form{
     position: absolute;
-    border-radius: 8px;
+    border-radius: 10px;
     z-index: 10;
-    padding: 50px 40px;
+    padding: 10px 10px;
+    padding-right: 77px;
     display: flex;
     flex-direction: column; 
 }
+.paragraph
+{
+    font-size: 1.1em;
+    text-align: left;
+    color: #000;
+}
+
+.paragraph p
+{
+    font-size: 1.2em;
+    color: #000000;
+}
+
 p
 {
-    font-size: 1.4em;
+    font-size: 1.1em;
     color:#000;
-    font-weight: bold;
+    text-align: left;
 }
 .inputs input
 {
-    padding: 15px;
-    width: 400px;
+    padding: 05px;
+    width: 450px;
     height: 25px;
-    font-size: 1.4em;
-    text-align: center;
-    background: #e6cccc;
+    font-size: 1.1em;
+    text-align: left;
+    background: #f1f1f1;
     color: #000000;
 }
 .buttom input
 {
     margin-top: 20px;
-    width: 100px;
+    width: 140px;
     height: 50px;
-    background-color: #e6cccc;
+    background-color: transparent;
+    color: #000;
+    font-weight: bold;
     cursor: pointer;
     transition: 0.5s;
 }
 .buttom input:hover
 {
-    background: #e58989;
+    background: #f3eeee;
     color: #130469;
 }
