start design css page(home page)

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body{
 .inputBox input:valid ~ i,
 .inputBox input:focus ~ i
 {
-    height: 44px;
+     height: 44px; 
 }
 .links{
     display: flex;
@@ -174,16 +174,16 @@ input:hover
 }
 .sign_up
 {
-    margin-top: 12px;
+    margin-top: 14px;
     color: #8f8f8f;
-    font-size: .80em;
+    font-size: 0.80em;
 }
 .sign_up a
 {
     color: #e58989;
     text-decoration: none;
-    font-size: 1.em;
-    padding-left: 18px;
+    font-size: 1em;
+    padding-left: 20px;
     transition: .5s;
 }
 .sign_up a:hover
