--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ input:hover
 {
     color: #e58989;
     text-decoration: none;
-    font-size: 1em;
+    font-size: 1+em;
     padding-left: 20px;
     transition: .5s;
 }
