--- a/home_page.css
+++ b/home_page.css
@@ -12,18 +12,19 @@ body .header
     position: fixed;
     display: flex;
     justify-content: space-between;
-    padding: 10px ; 
-    width: 100%;
+    padding: 10px;
+    width: 99%;
 }
 .header p
 {
-    font-size: 1.3em;
+    font-size: 1.2em;
     cursor:default;
 }
 .navbar a
 {
     position: relative;
-    font-size: 1.2em;
+    margin-right: 10px; 
+    font-size: 1.1em;
     padding-left: 10px;
     text-decoration: none;
     color: #000;
@@ -49,21 +50,35 @@ body .header
 }
 
 /* ===========================>body================================= */
-body .home_page__body
+body .home_body
 {
-    font-size: 1.2em;
-    padding: 80px;
-    padding-left: 10px;
-    text-align: left;
-    color: #ffffffad;
-    background-image: url(test.png);
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background-color: #9fbea551;
     background-size: cover;
-    height: 100vh;
-    padding-inline-end: 50%;
+    min-height: 100vh;
 }
-.home_page__body img 
+.box
 {
-    padding-left: 450px;
+    margin-top: 55px;
+    position: relative;
+    width: 100%;
+    height: 680px;
+    background-image: url(css_back.jpg);
+    background-size: cover;
+    background-position: center;
 }
+.home_page_body
+{
+    text-align: center;
+    font-size: 3em;
+    color: #fff;
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+
+}
+
 
   
