design home_page

--- a/home_page.css
+++ b/home_page.css
@@ -53,31 +53,48 @@ body .header
 body .home_body
 {
     display: flex;
-    justify-content: center;
-    text-align: center;
     background-color: #9fbea551;
     background-size: cover;
     min-height: 100vh;
 }
 .box
 {
-    margin-top: 55px;
+    margin-top: 50px;
     position: relative;
     width: 100%;
-    height: 680px;
-    background-image: url(css_back.jpg);
+    height: 700px;
+    background-image: url(black-wallpaper-4k-5290736_960_720.jpg);
     background-size: cover;
     background-position: center;
 }
 .home_page_body
 {
-    text-align: center;
-    font-size: 3em;
+    margin-left: 20px;
+    font-size: 2em;
     color: #fff;
-    padding-top: 10px;
+    padding-top: 100px;
     display: flex;
-    justify-content: center;
-
+}
+.home_page_body li
+{
+    list-style-type:none;
+}
+ #first_li
+{
+    color: #e47f7fbc;
+    font-size: 2.2em;
+}
+#second_li
+{
+    font-size: 2em;
+    margin-left: 10px;
+    color: #e47f7fa0;
+}
+#last_li
+{
+    padding: 15px;
+    font-size: 1.em;
+    color: #c2c6c8b1;
 }
 
 
